<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_recurring">Recurring</string>
    <string name="menu_budgets">Budgets</string>

    <string name="hint_transaction_name">Transaction Name</string>
    <string name="hint_amount">Amount</string>
    <string name="select_days">Select Days</string>
    <string name="button_select_days">Select Days</string>
    <string name="button_save">Save</string>
    <string name="button_add_recurring">Add Recurring Transaction</string>
    <string name="empty_view_message">No recurring transactions found</string>
    <string name="dialog_title_select_days">Select Days</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="error_fill_all_fields">Please fill all fields and select at least one day</string>
    <string name="success_transaction_added">Recurring transaction added successfully</string>
    <string name="error_transaction_failed">Failed to add recurring transaction</string>

    <!-- New strings for frequency selection -->
    <string-array name="frequency_options">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <!-- Define days of the week if needed -->
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- Navigation Drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_expenses">Add Categories</string>
    <string name="nav_recurring_transactions">Recurring Transactions</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_chart">Analytics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="amount">Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_budget">Add Budget</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="category">Category</string>

    <string name="monthly_expenses">Monthly Expenses</string>
    <string name="category_expenses">Category Expenses</string>
    <string name="delete_transaction">Delete</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Your Personal Finance Manager</string>
    <string name="delete">Delete</string>
    <string name="nav_budgets">Manage Bugets</string>
    <string name="monthly_expense_categories">Monthly Expense Categories</string>
    <string name="create_expense">Create Expense</string>


    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="nav_history">History</string>
    <string name="is_income">Is Income?</string>
</resources>