<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home Menu Item -->
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>

    <!-- Expenses Menu Item -->
    <item
        android:id="@+id/nav_expenses"
        android:title="@string/nav_expenses"
        android:icon="@drawable/ic_expenses"/>

    <!-- Recurring Transactions Menu Item -->
    <item
        android:id="@+id/nav_recurring_transactions"
        android:title="@string/nav_recurring_transactions"
        android:icon="@drawable/ic_recurring_transactions"/>

    <!-- Budgets Menu Item -->
    <item
        android:id="@+id/nav_budgets"
        android:title="@string/nav_budgets"
        android:icon="@drawable/ic_budgets"/>

    <!-- Analytics/Chart Menu Item -->
    <item
        android:id="@+id/nav_chart"
        android:title="@string/nav_chart"
        android:icon="@drawable/ic_chart"/>

    <!-- Settings Menu Item -->
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings"/>


</menu>
